--- a/about.html
+++ b/about.html
@@ -75,10 +75,15 @@
 									哈囉，我是宋清暘。
 								</div>
 								<div class="text-2">
-									<p>在經過一段時間的評估與思考後，目前投身於學習、嘗試與使用web前端技能。也正尋找一個網頁前端相關工作的機會，無論正職或者實習。
+									<p>【工作經驗】<br>
+										製作高單價訂製家具時，每件作品的完成品質，取決與過程中每個用心細節，除了對自己的本職工作品質要求之外，透過合作了解其他專業領域的內容與技術，持續追求更好，是我一直期許自己的基本態度。與客戶或團隊成員需要溝通時，過去業務工作的經驗，讓我更能敏銳察覺合作對象的需求與顧慮，並主動展開友善、明確的溝通，同步提升團隊工作效率與專案品質。<br><br>
+										
+										【進修網頁前端】<br>
+										在前一份工作的尾聲開始接觸網頁前端相關的知識，與我過去的工作經驗共同的是培養解決問題的能力。從專案開始的設計思考，突破各種中間可能碰到的問題，進而完成專案。自學進修期間逐漸熟悉各種工具與程式語言，踏實努力進步並解決問題的成就感，讓我確信這是我未來希望能持續耕耘的領域。<br><br>
+										
+										【關於我】<br>
+										「得不到的東西，代表你還不夠想要。」是我的座右銘。相信透過努力、學習與改變，我能獲得更好的未來，前端設計/工程是一個持續進化的領域，總能透過新的技術與思維，完成更貼近使用者需求的產品，面對如此寬廣的領域令人緊張而興奮，這正是我所追求的。
 									</p>
-									<p>畢業後的第一份工作是房仲業務，為期約兩年的業務生活對於我爾後的人生很有幫助，與很多不同年齡、不同學經歷、不同性格的人接觸增加了我溝通與待人處世的能力，業務過程中層出不窮的困難與挫折培養我解決問題的習慣與能力，業務工作也讓我學會了為自己的工作負責與正向樂觀的態度。</p>
-									<p>因為房仲業務的關係，接觸到了木製家具的行業，經過一段時間努力的學習後，展開兩段共為時五年的木製家具工作，從手工訂製家具到現代化製程的數位機加工，我很喜歡這個行業，但台灣的家具產業規模有其侷限性，最後在考量職涯規畫下，我開始新的努力方向。</p>
 								</div>
 							</div>
 						</div>
@@ -109,7 +114,7 @@
 								<div class="block-23 mb-3">
 									<ul>
 										<li><a href="#"><span class="icon icon-phone"></span><span class="text">0988392073</span></a></li>
-										<li><a href="#"><span class="icon icon-envelope"></span><span class="text">aeolusg38@gmail.com</span></a></li>
+										<li><a href="#"><span class="icon icon-envelope"></span><span class="text">laifu1009@gmail.com</span></a></li>
 									</ul>
 								</div>
 							</div>
