--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,6 @@
 				            <p><span>Email:</span> <a href="mailto:aeolusg38@gmail.com">aeolusg38@gmail.com</a></p>
 				          </div>
 			          </div>
-			          
 			        </div>
 		        </div>
 	        </div>
@@ -139,7 +138,7 @@
 							  <div class="block-23 mb-3">
 								  <ul>
 									  <li><a href="#"><span class="icon icon-phone"></span><span class="text">0988392073</span></a></li>
-									  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">aeolusg38@gmail.com</span></a></li>
+									  <li><a href="#"><span class="icon icon-envelope"></span><span class="text">laifu1009@gmail.com</span></a></li>
 								  </ul>
 							  </div>
 						  </div>
