--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="mb-5 huala-1-1">The best preparation for tomorrow is doing your best today.</div>
 							<div class="row">
 								<div class="col-md-6">
-									<p>在人生轉換跑道的路上，有時也感到害怕<br>不浪費每一個今天，就是給自己最好的鼓勵<br>-依舊不斷摸索前進的前端生活-</p>
+									<p>在人生的跑道上，每個今天都比昨天更進步<br>持續前進，就是給自己最好的鼓勵<br>-不斷前進的前端生活-</p>
 								</div>
 							</div>
 						</div>
@@ -77,24 +77,24 @@
 			          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 			            <div class="block-18">
 			              <div class="text">
-			                <strong class="number" data-number="32">0</strong>
-			                <span>年齡</span>
+			                <strong class="number" data-number="90">0</strong>
+			                <span>持續思考</span>
 			              </div>
 			            </div>
 			          </div>
 			          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 			            <div class="block-18">
 			              <div class="text">
-			                <strong class="number" data-number="117">0</strong>
-			                <span>持續努力的日子</span>
+			                <strong class="number" data-number="90">0</strong>
+			                <span>解決問題</span>
 			              </div>
 			            </div>
 			          </div>
 			          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 			            <div class="block-18">
 			              <div class="text">
-			                <strong class="number" data-number="33">0</strong>
-			                <span>距離退休的年份</span>
+			                <strong class="number" data-number="95">0</strong>
+			                <span>有效溝通</span>
 			              </div>
 			            </div>
 			          </div>
@@ -129,7 +129,7 @@
 							<div class="block-23 mb-3">
 								<ul>
 									<li><a href="#"><span class="icon icon-phone"></span><span class="text">0988392073</span></a></li>
-									<li><a href="#"><span class="icon icon-envelope"></span><span class="text">aeolusg38@gmail.com</span></a></li>
+									<li><a href="#"><span class="icon icon-envelope"></span><span class="text">laifu1009@gmail.com</span></a></li>
 								</ul>
 							</div>
 						</div>
