--- a/services.html
+++ b/services.html
@@ -70,47 +70,72 @@
 					<div class="row justify-content-end">
 						<div class="col-md-10">
 							<div class="row mb-lg-5">
-			          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-			            <div class="media block-6 services d-block">
-			              <div class="sk-img-1 d-flex justify-content-center align-items-center">
-			            		<span class=""></span>
-			              </div>
-			              <div class="media-body p-2 mt-3">
-			                <h3 class="heading sk-text">HTML 5</h3>
-			                <p></p>
-			              </div>
-			            </div>      
-			          </div>
-			          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-			            <div class="media block-6 services d-block">
-			              <div class="sk-img-2 d-flex justify-content-center align-items-center">
-			            		<span class=""></span>
-			              </div>
-			              <div class="media-body p-2 mt-3">
-			                <h3 class="heading sk-text">CSS</h3>
-			                <p></p>
-			              </div>
-			            </div>    
-			          </div>
-			          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
-			            <div class="media block-6 services d-block">
-			              <div class="sk-img-3 d-flex justify-content-center align-items-center">
-			            		<span class=""></span>
-			              </div>
-			              <div class="media-body p-2 mt-3">
-			                <h3 class="heading sk-text">JavaScript</h3>
-			                <p></p>
-			              </div>
-			            </div>      
-			          </div>
-			        </div>
-			        <div class="row mt-5">
-			        	<div class="col-md-6 ftco-animate">
-			        		目前學習了HTML、CSS、JavaScript，能比較熟練的使用HTML與CSS架設靜態網站，與相關常用於增加使用者互動感的作法，也嘗試用JavaScript、jQuery撰寫一些常用的動畫(如輪播、摺疊菜單...等)，還在持續學習與擴增技能中。
-			        	</div>
-			        </div>
-			      </div>
-	        </div>
+								<div class="col-md-3 d-flex align-self-stretch ftco-animate">
+									<div class="media block-6 services d-block">
+										<div class="sk-img-1 d-flex justify-content-center align-items-center">
+												<span class=""></span>
+										</div>
+										<div class="media-body p-2 mt-3">
+											<h3 class="heading sk-text">HTML 5</h3>
+											<p></p>
+										</div>
+									</div>      
+								</div>
+								<div class="col-md-3 d-flex align-self-stretch ftco-animate">
+									<div class="media block-6 services d-block">
+										<div class="sk-img-2 d-flex justify-content-center align-items-center">
+												<span class=""></span>
+										</div>
+										<div class="media-body p-2 mt-3">
+											<h3 class="heading sk-text">CSS</h3>
+											<p></p>
+										</div>
+									</div>    
+								</div>
+								<div class="col-md-3 d-flex align-self-stretch ftco-animate">
+									<div class="media block-6 services d-block">
+										<div class="sk-img-3 d-flex justify-content-center align-items-center">
+												<span class=""></span>
+										</div>
+										<div class="media-body p-2 mt-3">
+											<h3 class="heading sk-text">JavaScript</h3>
+											<p></p>
+										</div>
+									</div>      
+								</div>
+							</div>
+							<div class="row mb-lg-5">
+								<div class="col-md-3 d-flex align-self-stretch ftco-animate">
+									<div class="media block-6 services d-block">
+										<div class="sk-img-4 d-flex justify-content-center align-items-center">
+												<span class=""></span>
+										</div>
+										<div class="media-body p-2 mt-3">
+											<h3 class="heading sk-text">Photoshop</h3>
+											<p></p>
+										</div>
+									</div>      
+								</div>
+								<div class="col-md-3 d-flex align-self-stretch ftco-animate">
+									<div class="media block-6 services d-block">
+										<div class="sk-img-5 d-flex justify-content-center align-items-center">
+												<span class=""></span>
+										</div>
+										<div class="media-body p-2 mt-3">
+											<h3 class="heading sk-text">Adobe XD</h3>
+											<p></p>
+										</div>
+									</div>    
+								</div>
+							</div>
+							<div class="row mt-5">
+								<div class="col-md-6 ftco-animate">
+									熟悉 Adobe XD、PhotoShop，可獨立設計、製作wireframe、prototype。<br>
+									熟悉 HTML5、 CSS3、Javascript、jQuery 、Bootstrap，可獨立切版、編寫互動效果，完成RWD網頁。
+								</div>
+							</div>
+						</div>
+	        		</div>
 				</div>
 			</section>
 
@@ -136,7 +161,7 @@
 								<div class="block-23 mb-3">
 									<ul>
 										<li><a href="#"><span class="icon icon-phone"></span><span class="text">0988392073</span></a></li>
-										<li><a href="#"><span class="icon icon-envelope"></span><span class="text">aeolusg38@gmail.com</span></a></li>
+										<li><a href="#"><span class="icon icon-envelope"></span><span class="text">laifu1009@gmail.com</span></a></li>
 									</ul>
 								</div>
 							</div>
