--- a/collection.html
+++ b/collection.html
@@ -88,13 +88,30 @@
 						</div>
 						<div class="col-md-12 project ftco-animate">
 							<div class="pro-title">Web Design</div>
-							
+							<div class="grid">
+								<div class="grid-item">
+									<a href="https://huala17.github.io/Huala-Coffee/" target="_blank" rel="noopener" rel="noreferrer">
+										<img src="images/web-1.png">
+									</a>
+								</div>
+								<div class="grid-item">
+									<a href="https://huala17.github.io/lf-ice-index/" target="_blank" rel="noopener" rel="noreferrer">
+										<img src="images/web-2.png">
+									</a>
+								</div>
+								<div class="grid-item">
+									<a href="https://huala17.github.io/yishan/" target="_blank" rel="noopener" rel="noreferrer">
+										<img src="images/web-3.png">
+									</a>
+								</div>
+								<div class="grid-item">
+									<a href="https://huala17.github.io/Shelter/" target="_blank" rel="noopener" rel="noreferrer">
+										<img src="images/web-4.png">
+									</a>
+								</div>
+							</div>
 						</div>
-
-						
-
 					</div>
-
 				</div>
 			</section>
 			
