--- a/collection.html
+++ b/collection.html
@@ -45,7 +45,7 @@
 				</ul>
 				<p class="social">
 					<span><a href="#">宋清暘</a></span>
-					<span><a href="#">網頁‧前端/設計</a></span>
+					<span><a href="#">網頁前端‧程式/設計</a></span>
 
 				</p>
 			</nav>
