--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				</ul>
 				<p class="social">
 					<span>宋清暘</span>
-					<span>網頁‧前端/設計</span>
+					<span>網頁前端‧程式/設計</span>
 					<span></span>
 				</p>
 			</nav>
