--- a/collection.html
+++ b/collection.html
@@ -74,6 +74,11 @@
 							<div class="pro-title">Web Design</div>
 							<div class="grid">
 								<div class="grid-item">
+									<a href="https://huala17.github.io/fonts-welcome/" target="_blank" rel="noopener" rel="noreferrer">
+										<img src="images/web-5.png">
+									</a>
+								</div>
+								<div class="grid-item">
 									<a href="https://huala17.github.io/Huala-Coffee/" target="_blank" rel="noopener" rel="noreferrer">
 										<img src="images/web-1.png">
 									</a>
