--- a/collection.html
+++ b/collection.html
@@ -105,11 +105,15 @@
 							<div class="grid">
 								<div class="grid-item imgbig"><img src="images/5.png"></div>
 								<div class="grid-item imgbig"><img src="images/2.png"></div>
-								<div class="grid-item imgbig"><img src="images/6.png"></div>
+								<div class="grid-item imgbig"><img src="images/6.png"></div>			
+								<div class="grid-item imgbig"><img src="images/Web 1366 – 9.png"></div>
 								<div class="grid-item imgbig"><img src="images/4.png"></div>
 								<div class="grid-item imgbig"><img src="images/3.png"></div>
+								<div class="grid-item imgbig"><img src="images/Web 1366 – 1.png"></div>
 								<div class="grid-item imgbig"><img src="images/9.png"></div>
+								<div class="grid-item imgbig"><img src="images/Web 1920 – 3.png"></div>
 								<div class="grid-item imgbig"><img src="images/1.png"></div>
+								<div class="grid-item imgbig"><img src="images/Web 1366 – 12.png"></div>
 								<div class="grid-item imgbig"><img src="images/10.png"></div>
 								<div class="grid-item imgbig"><img src="images/7.png"></div>
 								<div class="grid-item imgbig"><img src="images/8.png"></div>
