--- a/collection.html
+++ b/collection.html
@@ -104,6 +104,7 @@
 							<div class="pro-title">Graphic Design</div>
 							<div class="grid">
 								<div class="grid-item imgbig"><img src="images/5.png"></div>
+								<div class="grid-item imgbig"><img src="images/13.png"></div>
 								<div class="grid-item imgbig"><img src="images/2.png"></div>
 								<div class="grid-item imgbig"><img src="images/6.png"></div>			
 								<div class="grid-item imgbig"><img src="images/Web 1366 – 9.png"></div>
